Fix port for deployment

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # Flask Configuration
-SECRET_KEY=your-secret-key-here-change-in-production
+SECRET_KEY=ai-smart-canteen-2026-super-secret-key-8f3k2J9sLqP0xZcA1mR7T5Y
 
 # Database
 SQLALCHEMY_DATABASE_URI=sqlite:///canteen.db
 
 # Debug Mode (set to False in production)
-FLASK_DEBUG=True
+FLASK_DEBUG=False
 
 # Application Settings
 FLASK_APP=app.py
