--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ Flask==2.3.3
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.5
 Werkzeug==2.3.7
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-matplotlib==3.7.2
-seaborn==0.12.2
+pandas>=2.1.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
 python-dotenv==1.0.0
 email-validator==2.0.0
